# packer-3d

./: Cargo.toml  README.md
src/: box3d.rs  lib.rs  sorting.rs  vector3d.rs
